# GraphicalEditorForNN

./: .gitignore  LICENSE  Makefile  README.md  compose.yml  config.json  config.py  mypy.ini  predict.json  requirements.txt  utils.py
.github/workflows/: CI.yml  blank.yml
client/: Makefile  index.html  package-lock.json  package.json  style.css
client/scripts/: auth.js  common.js  day_night_mode.js  icons.js  requests.js  storage.js  test.js
client/styles/: auth.css  common.css  day_night_mode.css  palette.css  style.css  test.css
client/templates/: authorization.html  hellopage.html  main.html  testpage.html
db/: app.py
documentation/api-examples/: predict.json  train.json  train1.json  userPredict.json
documentation/csv-examples/: xor-train.csv
py_server/: .dockerignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
py_server/mlcraft/: __init__.py  check_dimensions.py  dataset.py  db.py  dimension_checkers.py  errors.py  server.py  utils.py
py_server/mlcraft/static/: swagger.yaml
py_server/stubs/: flask_swagger_ui.pyi
py_server/tests/: conftest.py  test_check_dimensions.py  test_example.py  test_topology_sort.py  test_update_layer.py
server/: .dockerignore  Blob.cpp  Blob.h  BlobTests.cpp  Dockerfile  Makefile  Operation.cpp  Operation.h  README.md  Tensor.cpp  Tensor.h  cpp_tests  main.cpp  tensor.cpp  tensor.hpp
server/api/: CMakeLists.txt  CsvLoader.cpp  CsvLoader.h  DataLoader.cpp  DataLoader.h  DataMarker.cpp  DataMarker.h  GraphBuilder.cpp  GraphBuilder.h  ImageLoader.cpp  ImageLoader.h  Parser.cpp  Parser.h  UnshuffledCsvLoader.cpp  UnshuffledCsvLoader.h  UnshuffledDataLoader.h  UnshuffledImgLoader.cpp  UnshuffledImgLoader.h  main.cpp  server.cpp
server/core/: Allocator.cpp  Allocator.h  Blob.cpp  Blob.h  Iterations.cpp  Iterations.h  Layer.cpp  Layer.h  LazyBlob.cpp  LazyBlob.h  Operation.cpp  Operation.h  Optimizer.cpp  Optimizer.h  Parameters.h  RandomInit.cpp  RandomInit.h  Shape.cpp  Shape.h  Stretch.cpp  Stretch.h  Tensor.cpp  Tensor.h  example.cpp  main.cpp
server/tests/: BlobTests.cpp  CsvLoaderTests.cpp  DataMarkerTests.cpp  GraphTests.cpp  ImageLoaderTests.cpp  doctest.h  linear_relu_linear_mse.json
server/tests/data/: big_no_endline.csv  labels.csv  labels_no_endl.csv
server/tests/data/1/: labels.csv
