[project]
name = "mlcraft"
version = "1.0.0"
description = "no, seriously, you cannot build without description, wtf???"
dependencies = [
    "Flask == 3.0.0", 
    "Flask-SQLAlchemy == 3.1.1",
    "requests == 2.31.0",
    "pytest == 7.4.2",
    "Flask-Cors == 4.0.0"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["mlcraft"]

[tool.mypy]
show_error_codes = true
python_version = "3.10" # of course you should use version where list[int] is allowed!!!!!!!!
disable_error_code = "index"
