[project]
name = "mlcraft"
version = "1.0.0"
description = "no, seriously, you cannot build without description, wtf???"
requires-python = ">= 3.10"
dependencies = [
    "Flask == 3.0.0", 
    "Flask-SQLAlchemy == 3.1.1",
    "Flask-Cors == 4.0.0",
    "types-Flask-Cors == 4.0.0.1",
    "flask_swagger_ui == 4.11.1",
    "requests == 2.31.0",
    "types-requests == 2.31.0.10",
    "black == 23.10.1",
    "pytest == 7.4.2",
    "mypy == 1.6.1",
    "cython == 3.0.7",
    "matplotlib == 3.8.2",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["mlcraft"]

[tool.mypy]
show_error_codes = true
python_version = "3.10" # of course you should use version where list[int] is allowed!!!!!!!!
disable_error_code = "index"
